[package]
name = "dsa-blake3-rs"
version = "0.1.0"
authors = ["Enrico Rubboli <rubboli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "0.3.5"
hex = "0.4.2"
log = "0.4.14"

serde_json = "1.0"
serde = { version = "1.0.125", features = ["derive"] }
validator = { version = "0.13.0", features = ["derive"] }